test/Vehicle/Test/CompileMode/Error/LinearityErrors/nonLinearIfCondition.vcl
@network
f : Vector Rat 1 -> Vector Rat 1

@property
p : Bool 
p = forall (x : Rat) . (if x * x > 0 then True else False)